--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
 @import url('https://fonts.cdnfonts.com/css/geomanist');
 @import url('https://fonts.cdnfonts.com/css/mellissa-personal-use');
 @import url('https://fonts.cdnfonts.com/css/grinds');
+@import url('https://fonts.cdnfonts.com/css/clevio');
 
 :root {
     --bebas: 'Bebas Kai', sans-serif;
@@ -10,6 +11,12 @@
     --mellissa: 'Mellissa Personal Use', sans-serif;
     --deutsch: 'Deutsch-Gotisch Heavy', sans-serif;
     --grinds: 'Grinds', sans-serif;
+    --clevio: 'Clevio', sans-serif;
+                                                
+}
+
+.clevio {
+    font-family: var(--clevio);
 }
 
 .bebas {
@@ -49,3 +56,10 @@
     background-size: cover;
     background-attachment: fixed;
 }
+
+.outline-text {
+    font-size: 48px;
+    color: transparent;
+    -webkit-text-stroke: 1px white;
+    text-transform: uppercase;
+  }
