--- a/src/App.css
+++ b/src/App.css
@@ -46,9 +46,40 @@
     scroll-behavior: smooth;
 }
 
+
+/* ------------------- NAVBAR STYLES ------------------ */
 #navbar.scrolled {
-    background: #000000;
+    background: #131313;
 }
+
+.nav-link {
+    position: relative;
+    color: white;
+    text-decoration: none;
+    transition: color 0.5s ease;
+  }
+  
+  .nav-link:hover {
+    color: #b91c1c;
+  }
+  
+  .nav-link::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -2px;
+    width: 0;
+    height: 2px;
+    background-color: #b91c1c;
+    transition: width 0.5s ease;
+  }
+  
+  .nav-link:hover::after {
+    width: 100%;
+  }
+  
+/* ------------------- NAVBAR STYLES ------------------ */
+
 
 #hero {
     background-image: url(./assets/images/brad.jpg);
@@ -62,4 +93,95 @@
     color: transparent;
     -webkit-text-stroke: 1px white;
     text-transform: uppercase;
+}
+
+#bioImg {
+    background-image: url(./assets/images/brad2.jpg);
+    background-position: bottom center;
+    background-size: cover;
+}
+
+/* -------------- ANIMATED BUTTON STYLES ------------------- */
+.animated-button {
+    position: relative;
+    display: flex;
+    align-items: center;
+    gap: 4px;
+    padding: 16px 32px;
+    border: 2px solid;
+    border-color: transparent;
+    font-size: 16px;
+    border-radius: 8px;
+    font-weight: 400;
+    color: #FFFFFF;
+    font-family: var(--bebas);
+    cursor: pointer;
+    overflow: hidden;
+    transition: all 0.6s cubic-bezier(0.23, 1, 0.32, 1);
   }
+  
+  .animated-button i {
+    position: absolute;
+    width: 24px;
+    fill: #FFFFFF;
+    z-index: 9;
+    transition: all 0.8s cubic-bezier(0.23, 1, 0.32, 1);
+  }
+  
+  .animated-button .arr-1 {
+    right: 16px;
+  }
+  
+  .animated-button .arr-2 {
+    left: -25%;
+  }
+  
+  .animated-button .circle {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 20px;
+    height: 20px;
+    background-color: #b91c1c;
+    border-radius: 50%;
+    opacity: 0;
+    transition: all 0.8s cubic-bezier(0.23, 1, 0.32, 1);
+  }
+  
+  .animated-button .text {
+    position: relative;
+    z-index: 1;
+    transform: translateX(-12px);
+    transition: all 0.8s cubic-bezier(0.23, 1, 0.32, 1);
+  }
+  
+  .animated-button:hover {
+    box-shadow: 0 0 0 12px transparent;
+    transition: all 0.2s ease-in;
+  }
+  
+  .animated-button:hover .arr-1 {
+    right: -25%;
+  }
+  
+  .animated-button:hover .arr-2 {
+    left: 16px;
+  }
+  
+  .animated-button:hover .text {
+    transform: translateX(12px);
+  }
+  
+  .animated-button:active {
+    scale: 0.95;
+    box-shadow: 0 0 0 4px #450a0a;
+  }
+  
+  .animated-button:hover .circle {
+    width: 220px;
+    height: 220px;
+    opacity: 1;
+  }
+  
+/* -------------- ANIMATED BUTTON STYLES END ------------------- */
